# vcpkg_template

./: .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  clean.ps1  config.yaml  env.ps1  getenv.py  make.ps1  readme.md  setup.ps1  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: cil.yml
include/: stdafx.h  target.hpp
src/: target.cpp
